changing title to test git branch

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
   <!DOCTYPE html>
 <html>
   <head>
-    <title>Changing title</title>
+    <title>This is the new branch for the new feature</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
